<resources>
    <string name="app_name">XMusicG</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="library">Thư viện</string>
    <string name="setting">Cài đặt</string>
    <string name="prev_button">Previous Button</string>
    <string name="next_button">Next Button</string>
    <string name="play_button">Play Button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="track_album_art">Album</string>
    <string name="current_song_name">Current Song Name</string>
    <string name="current_artist_name">Current Artist Name</string>
    <string name="now_playing">Now Playing</string>
    <string name="_1_39">1.39</string>
    <string name="_4_39">4.39</string>
    <string name="heart">Heart</string>
    <string name="more">More option</string>
    <string name="searchKey">Nhập tên bài hát</string>
    <string name="back">Quay lại</string>
    <string name="no_resutl">Không có kết quả nào được tìm thấy</string>
    <string name="search_try">Kiểm tra chính tả hoặc thử một tìm kiếm khác</string>
    <string name="Albums">Albums</string>
    <string name="navigation_icon">Navigation icon</string>
    <string name="BXH">Bảng xếp hạng</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="no_acc">Bạn chưa có tài khoản?</string>
    <string name="sing_up">Đăng ký ngay</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="twitter">Twitter</string>
    <string name="white_bg">White BG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Tài khoản</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Huỷ</string>
</resources>