<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/home"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:cnb_iconColor="@color/search" />
    <item
        android:id="@+id/library"
        android:icon="@drawable/ic_library"
        android:title="@string/library"
        app:cnb_iconColor="@color/library" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:cnb_iconColor="@color/setting" />
</menu>