<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xxx_large"
        android:layout_marginRight="@dimen/margin_large"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="444dp"
                android:background="@drawable/white_cueve_bg"
                android:contentDescription="@string/white_bg" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_x_large"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57.7dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/login"
                    android:textColor="#030303"
                    android:textSize="31.3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/username"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayoutEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="44.3dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName|textEmailSubject"
                        android:maxLines="1"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginEnd="44.3dp"
                    android:background="#d5d5d5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30.3dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/password"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="13.3sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayoutPasswordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="44.3dp">

                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp"
                        app:drawable_hide="@drawable/hide1"
                        app:drawable_show="@drawable/show"
                        app:tint_color="#d5d5d5" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginEnd="44.3dp"
                    android:background="#d5d5d5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginEnd="44.3dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12.3sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingStart="30dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/yellow_fb" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/linkedin"
                    android:src="@drawable/yellow_linkedin" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="50dp"
                        android:contentDescription="@string/twitter"
                        android:src="@drawable/yellow_twitter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btLogin"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/login"
                        android:scaleType="centerInside"
                        android:src="@drawable/black_arrow" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_xx_large"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:text="@string/no_acc"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:text="@string/sing_up"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>