<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SongActivity">

    <View
        android:id="@+id/viewSupportForBg"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/layoutPlayer"
        app:layout_constraintStart_toStartOf="@id/layoutPlayer"
        app:layout_constraintTop_toTopOf="@id/layoutPlayer" />

    <View
        android:id="@+id/viewSupportForAlbumArt"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/viewSupportForAlbumArt"
        app:layout_constraintEnd_toStartOf="@id/viewSupportForAlbumArt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/viewSupportForBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

<!--    <com.gauravk.audiovisualizer.visualizer.CircleLineVisualizer-->
<!--        xmlns:custom="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/blast"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        custom:avColor="@color/av_deep_orange"-->
<!--        custom:avDensity="0.5"-->
<!--        custom:avSpeed="medium"-->
<!--        custom:avType="fill"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/viewSupportForAlbumArt"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/viewSupportForAlbumArt"/>-->

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/rivImg"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/beauty"
        app:layout_constraintBottom_toBottomOf="@id/viewSupportForAlbumArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewSupportForAlbumArt"
        app:riv_corner_radius="150dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="Current Song Name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rivImg" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Current Artist Name"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <TextView
        android:id="@+id/tvNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Now Playing"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@id/tvNow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvNow"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNow"
        app:layout_constraintTop_toTopOf="@id/tvNow" />

<!--    <com.gauravk.audiovisualizer.visualizer.CircleLineVisualizer-->
<!--        android:id="@+id/blast"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        app:avColor="@color/av_deep_orange"-->
<!--        app:avDensity="0.5"-->
<!--        app:avSpeed="medium"-->
<!--        app:avType="fill"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/viewSupportForAlbumArt"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/viewSupportForAlbumArt" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_bg"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvLyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="Lyrics"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/btPlay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_bg"
            android:padding="4dp"
            android:scaleType="center"
            android:src="@drawable/ic_play"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tvLyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/play_button"/>

        <ImageButton
            android:id="@+id/btPrev"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/prev_button"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="@id/btPlay"
            app:layout_constraintEnd_toStartOf="@id/btPlay"
            app:layout_constraintTop_toTopOf="@id/btPlay" />


        <ImageButton
            android:id="@+id/btNext"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_button"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/btPlay"
            app:layout_constraintStart_toEndOf="@id/btPlay"
            app:layout_constraintTop_toTopOf="@id/btPlay" />

        <ImageButton
            android:id="@+id/btShuffle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/shuffle_button"
            android:scaleType="fitStart"
            android:src="@drawable/sf"
            app:layout_constraintBottom_toBottomOf="@id/btPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btPlay" />

        <ImageButton
            android:id="@+id/btRepeat"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/repeat_button"
            android:scaleType="centerInside"
            android:src="@drawable/rp"
            app:layout_constraintBottom_toBottomOf="@id/btPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btPlay" />

        <SeekBar
            android:id="@+id/playerSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:progress="30"
            android:theme="@style/SeekBarTheme"
            app:layout_constraintBottom_toTopOf="@id/btPlay" />

        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="1.39"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
            app:layout_constraintStart_toStartOf="@id/playerSeekBar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="4dp"
            android:text="4.39"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
            app:layout_constraintEnd_toEndOf="@id/playerSeekBar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>